add base exchange rate ro currency
